@@ -87,3 +87,35 @@ func AddSwapPercentage(s *SwapStat) {
 	perc := float64(s.Swap.Used) / float64(s.Swap.Total)
 	s.UsedPercent = common.Round(perc, common.DefaultDecimalPlacesCount)
 }
+
+// HugeTLBPagesStat includes metrics about huge pages usage
+type HugeTLBPagesStat struct {
+	sigar.HugeTLBPages
+	UsedPercent float64 `json:"used_p"`
+}
+
+// GetHugeTLBPages returns huge pages usage metrics
+func GetHugeTLBPages() (*HugeTLBPagesStat, error) {
+	pages := sigar.HugeTLBPages{}
+	err := pages.Get()
+
+	if err == nil {
+		return &HugeTLBPagesStat{HugeTLBPages: pages}, nil
+	}
+
+	if sigar.IsNotImplemented(err) {
+		return nil, nil
+	}
+
+	return nil, err
+}
+
+// AddHugeTLBPagesPercentage calculates ratio of used huge pages
+func AddHugeTLBPagesPercentage(s *HugeTLBPagesStat) {
+	if s.Total == 0 {
+		return
+	}
+
+	perc := float64(s.Total-s.Free+s.Reserved) / float64(s.Total)
+	s.UsedPercent = common.Round(perc, common.DefaultDecimalPlacesCount)
+}
